--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -1609,7 +1609,7 @@ Sei $K$ ein Körper.
 
 % Kapitel 6
 \chapter{Restklassenringe von Polynomen}
-Sei $K$ ein Körper.
+In dem Kapitel sei $K$ immer ein Körper.
 
 % Bemerkung
 \begin{bem}\label{bem:6.1}
@@ -1619,10 +1619,10 @@ Sei $K$ ein Körper.
   \pmod{\phi}$. Man zeigt leicht, dass dies eine Äquivalenzrelation
   ist. Die Äquivalenzklasse von $\alpha$ heißt \highl{Restklasse}
   modulo $\phi$. Sie hat die Form $\alpha + \phi K[X] \coloneqq
-  \{\alpha + \phi\tau \colon \tau \in K[X]\}$. Man setzt $(\phi)
+  \Set{\alpha + \phi\tau | \tau \in K[X]}$. Man setzt $(\phi)
   \coloneqq \phi K[X]$.
 
-  Divison mit Rest liefert $\kappa, \rho \in K[X]$ mit $\alpha =
+  Die Divison mit Rest liefert $\kappa, \rho \in K[X]$ mit $\alpha =
   \kappa\phi + \rho$ und $\deg\rho < \deg\phi$. Dann ist $\alpha
   \equiv \rho \pmod{\phi}$, d.\,h. $\alpha + (\phi) = \rho +
   (\phi)$. Daher enthält jede Restklasse modulo $\phi$ ein
@@ -1630,10 +1630,10 @@ Sei $K$ ein Körper.
 
   Die Menge aller Restklassen modulo $\phi$ ist also
   \begin{align*}
-    K[X] / (\phi) & \coloneqq \{\alpha + (\phi) \colon \alpha \in
-    K[X]\} = \{\rho + (\phi) \colon \rho \in K[X], \deg\rho < n\}\\
-    & = \{a_0 + a_1X + \dotsc + a_{n - 1}X^{n - 1} + (\phi) \colon
-    a_0, \ldots, a_{n - 1} \in K\}
+    K[X] / (\phi) &\coloneqq \Set{\alpha + (\phi) | \alpha \in
+    K[X]} = \Set{\rho + (\phi) | \rho \in K[X], \deg\rho < n}\\
+    & = \Set{a_0 + a_1X + \dotsc + a_{n - 1}X^{n - 1} + (\phi) |
+    a_0, \ldots, a_{n - 1} \in K}
   \end{align*}
   mit $n \coloneqq \deg\phi$. Seien $\rho, \sigma \in K[X]$ mit $\deg\rho
   < n, \deg\sigma < n$ und $\rho + (\phi) = \sigma + (\phi)$,
@@ -1649,19 +1649,27 @@ Sei $K$ ein Körper.
   modulo $\phi$ mit Addition und Multiplikation in $K[X]$
   verträglich ist, d.\,h. für $\alpha_1, \alpha_2, \beta_1, \beta_2
   \in K[X]$ gilt:
-  \[\alpha_1 \equiv \alpha_2 \pmod{\phi} \wedge \beta_1 \equiv
-  \beta_2 \pmod{\phi} \Rightarrow \alpha_1 \stackrel{+}{\cdot}
-  \beta_1 \equiv \alpha_2 \stackrel{+}{\cdot} \beta_2 \pmod{\phi}\]
+  \begin{align*}
+    alpha_1 &\equiv \alpha_2 \pmod{\phi} \wedge \beta_1 \equiv \beta_2
+    \pmod{\phi}\\
+    &\Rightarrow \alpha_1 + \beta_1 \equiv \alpha_2+ \beta_2
+    \pmod{\phi}\\
+    &\qquad\wedge \alpha_1 \cdot \beta_1 \equiv \alpha_2\cdot \beta_2
+    \pmod{\phi}
+  \end{align*}
   Dies erlaubt es, auf $K[X] / (\phi)$ Addition und Multiplikation
   zu definieren:
-  \[\big(\alpha + (\phi)\big) \stackrel{+}{\cdot} \big(\beta +
-  (\phi)\big) \coloneqq \alpha \stackrel{+}{\cdot} \beta + (\phi)
-  \qquad (\alpha, \beta \in K[X])\]
+  \begin{align*}
+    \big(\alpha + (\phi)\big) + \big(\beta + (\phi)\big) &\coloneqq
+    \alpha + \beta + (\phi)\\
+    \big(\alpha + (\phi)\big) \cdot \big(\beta + (\phi)\big)
+    &\coloneqq \alpha \cdot \beta + (\phi)\qquad (\alpha, \beta \in K[X])
+  \end{align*}
   Man rechnet nach, dass $K[X] / (\phi)$ mit diesen Verknüpfungen
   zu einem kommutativen Ring wird, dieser heißt
-  \highl{Restklassenring modulo $\phi$}.
+  \highl{Restklassenring modulo $\phi$}\index{Restklassenring}.
 
-  Nullelement ist $0 + (\phi)$, Einselement $1 +
+  Das Nullelement ist $0 + (\phi)$ und das Einselement $1 +
   (\phi)$. Außerdem kann man Elemente in $K[X] / (\phi)$ mit
   Elementen aus $K$ multiplizieren:
   \[a(\beta + (\phi)) \coloneqq a\beta + (\phi) \qquad (a \in K, \beta
@@ -1674,23 +1682,23 @@ Sei $K$ ein Körper.
 
 % Satz 6.1
 \begin{satz}\label{satz:6.1}
-Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
-\begin{enumerate}[(1)]
-\item $\alpha + (\phi)$ ist in $K[X] / (\phi)$ invertierbar.
-\item Es existiert ein $\beta \in K[X]$ mit $\alpha\beta \equiv 1
-  \pmod{p}$.
-\item $\ggt(\alpha, \phi) = 1$
-\end{enumerate}
-\begin{beweis}
-  Analog zu $\ZmZ{m}$.
-\end{beweis}
+  Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
+  \begin{enumerate}[(1)]
+  \item $\alpha + (\phi)$ ist in $K[X] / (\phi)$ invertierbar.
+  \item Es existiert ein $\beta \in K[X]$ mit $\alpha\beta \equiv 1
+    \pmod{p}$.
+  \item $\ggt(\alpha, \phi) = 1$
+  \end{enumerate}
+  \begin{beweis}
+    Analog zu $\ZmZ{m}$.
+  \end{beweis}
 \end{satz}
 
 % Bemerkung
 \begin{bem}\label{bem:6.3}
   Für $0 \neq \phi \in K[X]$ gilt nach \autoref{satz:6.1}:
-  \[U(K[X] / (\phi)) = \{\alpha + (\phi) \colon \alpha \in K[X],
-  \ggt(\alpha, \phi) = 1\}\]
+  \[U(K[X] / (\phi)) = \Set{\alpha + (\phi) | \alpha \in K[X],
+  \ggt(\alpha, \phi) = 1}\]
   Der erweiterte euklidische Algorithmus liefert zu $\alpha \in K[X]$ mit
   $\ggt(\alpha, \phi) = 1$ Polynome $\beta, \gamma \in K[X]$ mit
   $\alpha\beta + \phi\gamma = 1$. Dann ist $\alpha\beta \equiv 1
@@ -1701,27 +1709,26 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
 
 % Satz 6.2
 \begin{satz}\label{satz:6.2}
-  Sei $0 \neq \phi \in K[X]$ normiert. Dann gilt:
-  \[K[X] / (\phi) \text{ Körper } \Leftrightarrow \phi
-  \text{ irreduzibel.}\]
-\begin{beweis}
-\begin{itemize}
-\item[\glqq$\Rightarrow$\grqq] Sei $K[X] / (\phi)$ ein
-  Körper. Wegen $K[X] / (\phi) \neq \{0\}$ ist $\deg\phi >
-  0$. Wäre $\phi$ reduzibel, so wäre $\phi = \alpha\beta$ mit
-  $\alpha, \beta \in K[X], \deg\alpha < \deg\phi, \deg\beta <
-  \deg\phi$. Dann wäre $\alpha + (\phi) \neq 0 \neq \beta +
-  (\phi)$. Aber $[\alpha + (\phi)][\beta + (\phi)] =
-  \alpha\beta + (\phi) = \phi + (\phi) = 0 + (\phi)
-  \Rightarrow$ Widerspruch!
-\item[\glqq$\Leftarrow$\grqq] Sei $\phi$ irreduzibel. Dann
-  $\deg\phi > 0$ und $K[X] / (\phi) \neq \{0\}$. Sei $0 \neq
-  \alpha \in K[X]$ mit $\deg\alpha < \deg\phi$. Dann:
-  $\phi\nmid\alpha$, also $\ggt(\alpha, \phi) = 1$. Folglich:
-  $\alpha + (\phi) \in U(K[X]/(\phi))$. Also $K[X] / (\phi)$
-  Körper.
-\end{itemize}
-\end{beweis}
+  Sei $0 \neq \phi \in K[X]$ normiert. Dann ist $K[X] / (\phi)$ genau
+  dann ein Körper, wenn $\phi$ irreduzibel ist.
+  \begin{beweis}
+    \begin{itemize}
+    \item[\glqq$\Rightarrow$\grqq] Sei $K[X] / (\phi)$ ein
+      Körper. Wegen $K[X] / (\phi) \neq \{0\}$ ist $\deg\phi >
+      0$. Wäre $\phi$ reduzibel, so wäre $\phi = \alpha\beta$ mit
+      $\alpha, \beta \in K[X], \deg\alpha < \deg\phi, \deg\beta <
+      \deg\phi$. Dann wäre $\alpha + (\phi) \neq 0 \neq \beta +
+      (\phi)$. Aber $[\alpha + (\phi)][\beta + (\phi)] =
+      \alpha\beta + (\phi) = \phi + (\phi) = 0 + (\phi)
+      \Rightarrow$ Widerspruch!
+    \item[\glqq$\Leftarrow$\grqq] Sei $\phi$ irreduzibel. Dann
+      $\deg\phi > 0$ und $K[X] / (\phi) \neq \{0\}$. Sei $0 \neq
+      \alpha \in K[X]$ mit $\deg\alpha < \deg\phi$. Dann:
+      $\phi\nmid\alpha$, also $\ggt(\alpha, \phi) = 1$. Folglich:
+      $\alpha + (\phi) \in U(K[X]/(\phi))$. Also $K[X] / (\phi)$
+      Körper.
+    \end{itemize}
+  \end{beweis}
 \end{satz}
 
 % Beispiel
@@ -1738,12 +1745,12 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
 \end{bsp}
 
 % Definition
-\begin{defi}
+\begin{defi}[Teilkörper]
   Ein \highl{Teilkörper} von $K$ ist eine Teilmenge $k$ von $K$ mit
   folgenden Eigenschaften:
   \begin{enumerate}[(i)]
   \item $0, 1 \in k$
-  \item $a, b \in k \Rightarrow a \stackrel{\pm}{\cdot} b \in k$
+  \item Aus $a, b \in k$ folgt, $a \pm b \in k$ und $a\cdot b\in k$.
   \item $a \in k, 0 \neq b \in k \Rightarrow \frac{a}{b} \in k$
   \end{enumerate}
 \end{defi}
@@ -1753,7 +1760,8 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
   Gegebenenfalls ist $k$ mit den entsprechenden eingeschränkten
   Verknüpfungen ein Körper. Man nennt $K$ einen
   \highl{Erweiterungskörper} von $k$, dass Paar $(K, k)$ heißt
-  \highl{Körpererweiterung}. Man schreibt: $K\mid k$.
+  \highl{Körpererweiterung}. Man schreibt: $K\mid k$\todo{Soll hier
+    ein mid oder nur ein | hin?}.
 \end{bem}
 
 % Beispiel
@@ -1765,28 +1773,28 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
     ist der Durchschnitt aller Teilkörper von $K$ ein Teilkörper $P$
     von $K$. Dieser Teilkörper $P$ heißt \highl{Primkörper} von
     $K$.
-\end{enumerate}
+  \end{enumerate}
 \end{bsp}
 
 % Bemerkung
 \begin{bem}\label{bem:6.5}
   Sei $L\mid K$ Körpererweiterung. Dann kann man $L$ als
-  $K$-Vektorraum auffassen. Man nennt $[L:K] \coloneqq \dim_KL$ den Grad der
-  Körpererweiterung.
+  $K$-Vektorraum auffassen. Man nennt $[L\colon K] \coloneqq \dim_KL$
+  den \highl[Körpererweiterung!Grad der]{Grad der Körpererweiterung}.
 \end{bem}
 
 % Beispiel
 \begin{bsp}\label{bsp:6.3}
-  $[\C\mid \R] = 2$, $[\R\mid \Q] = \infty$
+  Es ist $[\C\mid \R] = 2$ und $[\R\mid \Q] = \infty$.
 \end{bsp}
 
 % Satz 6.3
 \begin{satz}[Gradsatz]\label{satz:6.3}
-  Für jede doppelte Körpererweiterung $M\mid L\mid K$ gilt: \[[M:K] =
-  [M:L][L:K]\]
+  Für jede doppelte Körpererweiterung $M\mid L\mid K$ gilt: \[[M\colon K] =
+  [M\colon L][L\colon K]\]
 \begin{beweis}
-  Aus $[M:L] = \infty$ oder $[L:K] = \infty$ folgt natürlich $[M:K] =
-  \infty$. Daher seien $[M:L]$ und $[L:K]$ endlich. Wähle $K$-Basis
+  Aus $[M\colon L] = \infty$ oder $[L\colon K] = \infty$ folgt natürlich $[M\colon K] =
+  \infty$. Daher seien $[M\colon L]$ und $[L\colon K]$ endlich. Wähle $K$-Basis
   $a_1, \ldots, a_m$ von $L$ und $L$-Basis $b_1, \ldots, b_n$ von
   $M$. Wir zeigen, dass die Elemente $a_i b_j$ mit $i = 1, \ldots, m,
   j = 1, \ldots, n$ eine $K$-Basis von $M$ bilden.
@@ -1931,7 +1939,7 @@ Für $\alpha \in K[X]$ und $0 \neq \in K[X]$ sind äquivalent:
 \begin{beweis}
   Im Fall $\ch(K) = 0$ wäre der Primkörper $P$ von $K$ zu $\Q$
   isomorph, also unendlich. Also: $p \coloneqq \ch(K) > 0$. Dann $K\mid P$
-  Körpererweiterung. Da $K$ endlich ist, ist $n \coloneqq [K:P] <
+  Körpererweiterung. Da $K$ endlich ist, ist $n \coloneqq [K\colon P] <
   \infty$. Folglich: $\abs{ K} = \abs{ P} ^n = p^n$.
 \end{beweis}
 \end{satz}
@@ -2033,7 +2041,7 @@ aber $3$.
 \begin{beweis}
   \begin{enumerate}[(i)]
   \item Sei $F \subseteq E$ Teilkörper. Dann: $p = \ch(E) = \ch(F)$,
-    also $\abs{ F}  = p^f$ für ein $f \in \N$. Sei $n \coloneqq [E:F]$. Dann:
+    also $\abs{ F}  = p^f$ für ein $f \in \N$. Sei $n \coloneqq [E\colon F]$. Dann:
     $E \cong F^n$ als $F$-Vektorraum. Insbesondere $p^e = \abs{ E}  =
     \abs{ F} ^n = p^{f^n}$, d.\,h. $f\mid e$.
   \item Sei $f \in \N$ mit $f\mid e$. Nach ÜA 5 ist dann: $p^f-1\mid
@@ -2157,7 +2165,7 @@ Sei $L|K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit
   Minimalpolynom $\mu$ vom Grad $n$. Dann ist die Abbildung \[f \colon
   \underbrace{K[X]|(\mu)}_{\text{Körper, weil }\mu \text{ irreduzibel}}
   \rightarrow K(b), \phi + (\mu) \mapsto \phi(b)\] ein
-  Körperisomorphismus; insbesondere ist $\left[K(b):K\right] = \deg{\mu} = n <
+  Körperisomorphismus; insbesondere ist $\left[K(b)\colon K\right] = \deg{\mu} = n <
   \infty$, und \[K(b) = \left\{a_0 + a_1b + \dotsc + a_{n-1}b^{n-1} \colon
   a_0, \ldots, a_{n-1} \in K\right\}.\]
 \end{satz}
@@ -2183,12 +2191,12 @@ Sei $L|K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit
 Wegen $K[X]/\mu = \left\{a_0 + a_1X + \dotsc + a_{n-1}X^{n-1} + (\mu) \colon a_0, \ldots, a_{n-1} \in K\right\}$ ist $Bld(f) = \left\{a_0 + a_1b + \dotsc + a_{n-1}b^{n-1} \colon a_0, \ldots, a_{n-1} \in K\right\} \subseteq L$ Teilkörper. Wegen $K \subseteq Bld(f)$ und $b \in Bld(f)$ ist $K(b) \subseteq Bld(f)$.\\
 Andererseits ist $Bld(f)$ in jedem Teilkörper von $L$ enthalten, der $K$ und $b$ enthält. Also ist $Bld(f) \subseteq K(b) \Rightarrow Bld(f) = K(b)$.\\
 Also ist $f$ Körperhomomorphismus.\\
-Offenbar ist $f$ auch $K$-linear. Daher: \[\left[K(b):K\right] = \dim_k K(b) = \dim_k K[X] / (\mu) = \deg{\mu}\].
+Offenbar ist $f$ auch $K$-linear. Daher: \[\left[K(b)\colon K\right] = \dim_k K(b) = \dim_k K[X] / (\mu) = \deg{\mu}\].
 \end{beweis}
 
 % Beispiel 7.3
 \begin{bsp}\label{bsp:7.3}
-$L|K$ Körpererweiterung und $n \coloneqq \left[L:K\right] < \infty$.\\
+$L|K$ Körpererweiterung und $n \coloneqq \left[L\colon K\right] < \infty$.\\
 Dann ist $L|K$ algebraisch; denn für $b \in L$ können die $n + 1$ Elemente $1, b, b^2, \ldots, b^n$ nicht linear unabhängig sein. Folglich existiert $a_0, a_1, \ldots, a_n \in K$, nicht alle gleich $0$, mit $a_0 + a_1b + \dotsc + a_nb^n = 0$.\\
 Also: $\phi \coloneqq a_0 + a_1X + \dotsc + a_nX^n \in K[X] \backslash
   \left\{0\right\}$ mit $\phi(b) = 0$, d.\,h. $b$ algebraisch über $K$.\\
@@ -2213,14 +2221,14 @@ $F$ heißt \highl{Algebraischer Abschluss} von $K$ in $L$.
 % Beweis
 \begin{beweis}
 \begin{enumerate}[(i)]
-	\item Seien $b_1, \ldots, b_n$ algebraisch über $K$. Nach \autoref{satz:7.2} ist $\left[K(b_1):K\right] < \infty$. Offenbar ist $b_2$ auch algebraisch über $K(b_1)$\footnote{ein etwas größerer Körper als $K$}. Daher ist analog: \[\left[\underbrace{(K(b_1))(b_2)}_{= K(b_1, b_2)}:K(b_1)\right] < \infty\] Gradsatz: $\left[K(b_1, b_2):K\right] < \infty$. Induktiv folgt: \[\left[K(b_1, \ldots, b_n):K\right] < \infty.\] Nach \autoref{bsp:7.3} ist $K(b_1, \ldots, b_n)|K$ algebraisch.
+	\item Seien $b_1, \ldots, b_n$ algebraisch über $K$. Nach \autoref{satz:7.2} ist $\left[K(b_1)\colon K\right] < \infty$. Offenbar ist $b_2$ auch algebraisch über $K(b_1)$\footnote{ein etwas größerer Körper als $K$}. Daher ist analog: \[\left[\underbrace{(K(b_1))(b_2)}_{= K(b_1, b_2)}\colon K(b_1)\right] < \infty\] Gradsatz: $\left[K(b_1, b_2)\colon K\right] < \infty$. Induktiv folgt: \[\left[K(b_1, \ldots, b_n)\colon K\right] < \infty.\] Nach \autoref{bsp:7.3} ist $K(b_1, \ldots, b_n)|K$ algebraisch.
 	\item \begin{itemize}
-	\item["`$\Rightarrow$"'] Sei $M|K$ algebraisch. Dann ist jedes $b \in M$ algebraisch über $K$,also auch über $L$. Daher ist $M:L$ algebraisch. Ferner ist jedes $b \in L$ algebraisch über $K$ und daher ist auch $L|K$ algebraisch.\\
+	\item["`$\Rightarrow$"'] Sei $M|K$ algebraisch. Dann ist jedes $b \in M$ algebraisch über $K$,also auch über $L$. Daher ist $M\colon L$ algebraisch. Ferner ist jedes $b \in L$ algebraisch über $K$ und daher ist auch $L|K$ algebraisch.\\
 	\item["`$\Leftarrow$"'] Seien $M|L$, $L|K$ algebraisch, und sei $c \in M$.\\
 	Dann existiert $b_0, \ldots, b_{n-1} \in L$ mit $c^n + b_{n-1}c^{n-1} + \dotsc + b_1c + b_0 = 0$.\\
-	Daher ist $c$ algebraisch über $K(b_0, \ldots, b_{n-1})$. Nach \autoref{satz:7.2} ist \[\left[\underbrace{(K(b_0, \ldots, b_{n-1}))(c)}_{= K(b_0, \ldots, b_{n-1}, c)}:K(b_0, \ldots, b_{n-1})\right] < \infty\]
-	Nach dem Beweis von (i) ist $\left[K(b_0, \ldots, b_{n-1}):K\right] < \infty$.\\
-	Gradsatz: $\left[K(b_0, \ldots, b_{n-1}, c):K\right] < \infty$.\\
+	Daher ist $c$ algebraisch über $K(b_0, \ldots, b_{n-1})$. Nach \autoref{satz:7.2} ist \[\left[\underbrace{(K(b_0, \ldots, b_{n-1}))(c)}_{= K(b_0, \ldots, b_{n-1}, c)}\colon K(b_0, \ldots, b_{n-1})\right] < \infty\]
+	Nach dem Beweis von (i) ist $\left[K(b_0, \ldots, b_{n-1})\colon K\right] < \infty$.\\
+	Gradsatz: $\left[K(b_0, \ldots, b_{n-1}, c)\colon K\right] < \infty$.\\
 	\autoref{bsp:7.3}: $K(b_0, \ldots, b_{n-1}, c)|K$ algebraisch; insbesondere $c$ algebraisch über $K$.
 	\item Nach \autoref{bsp:7.1} ist $K \subseteq F$. Insbesondere
           sind $0, 1 \in F$. Seien nun $b, c \in F$. Nach dem
@@ -2236,15 +2244,15 @@ $F$ heißt \highl{Algebraischer Abschluss} von $K$ in $L$.
 % Beispiel 7.4
 \begin{bsp}\label{bsp:7.4}
 Bekanntlich ist $\sqrt{2} \in \R$ algebraisch über $\Q$ mit Minimalpolynom $X^2 - 2$.\\
-Daher: $\left[\Q(\sqrt{2}):\Q\right] = \deg{(X^2 - 2)} = 2$.\\
+Daher: $\left[\Q(\sqrt{2})\colon \Q\right] = \deg{(X^2 - 2)} = 2$.\\
 Sogar: $\Q(\sqrt{2}) = (a + b\sqrt{2} \colon a, b \in \Q)$. Für $a + b\sqrt{2} \neq 0$ ist  dabei \[\frac{1}{a + b\sqrt{2}} = \frac{a - b\sqrt{2}}{(a + b\sqrt{2})(a - b\sqrt{2})} = \frac{a}{a^2 - 2b^2} - \frac{b}{a^2 - 2b^2}\sqrt{2} \in \Q(\sqrt{2}).\]
 Es ist $\sqrt{3} \notin \Q(\sqrt{2})$, denn sonst könnte man $\sqrt{3} = a + b\sqrt{2}$ mit $a, b \in \Q$ schreiben. Dann wäre aber $3 = a^2 + 2\sqrt{2}ab + 2b^2$.\\
 Koeffizientenvergleich \footnote{$1, \sqrt{2}$ sind linear unabhängig; $3 = 3
   \cdot 1 + 0\sqrt{2}$} liefert: $ab = 0$, d.\,h. $a = 0$ oder $b = 0$.\\
 Im Fall $a = 0$ wäre $3 = 2b^2$, was nicht geht. Im Fall $b = 0$ wäre $3 = a^2$, was auch nicht geht.\\
 Daher ist $\sqrt{3}$ algebraisch über $\Q(\sqrt{2})$ mit Minimalpolynom $X^2 - 3$.\\
-Folglich: $\left[(\Q(\sqrt{2}))(\sqrt{3}):\Q(\sqrt{2})\right] = \deg{(X^2 - 3)} = 4$.\\
-Gradsatz: $\left[\Q(\sqrt{2}, \sqrt{3}):\Q\right] = 4$. Insbesondere $\sqrt{2} + \sqrt{3} \in \Q(\sqrt{2}, \sqrt{3})$ ist algebraisch über $\Q$. Was ist das Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? $Q(\sqrt{2})$ hat Basis $1, \sqrt{2}$ über $\Q, \Q(\sqrt{2}, \sqrt{3}):\Q(\sqrt{2})$ hat Basis $1, \sqrt{3}$ über $\Q$. Gradsatz: $1, \sqrt{2}, \sqrt{3}, \sqrt{2} \cdot \sqrt{3} = \sqrt{6}\ \Q$-Basis von $\Q(\sqrt{2}, \sqrt{3})$.
+Folglich: $\left[(\Q(\sqrt{2}))(\sqrt{3})\colon \Q(\sqrt{2})\right] = \deg{(X^2 - 3)} = 4$.\\
+Gradsatz: $\left[\Q(\sqrt{2}, \sqrt{3})\colon \Q\right] = 4$. Insbesondere $\sqrt{2} + \sqrt{3} \in \Q(\sqrt{2}, \sqrt{3})$ ist algebraisch über $\Q$. Was ist das Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? $Q(\sqrt{2})$ hat Basis $1, \sqrt{2}$ über $\Q, \Q(\sqrt{2}, \sqrt{3})\colon \Q(\sqrt{2})$ hat Basis $1, \sqrt{3}$ über $\Q$. Gradsatz: $1, \sqrt{2}, \sqrt{3}, \sqrt{2} \cdot \sqrt{3} = \sqrt{6}\ \Q$-Basis von $\Q(\sqrt{2}, \sqrt{3})$.
 \[\left.\begin{array}{lcl}
 b^0 & = & 1\\
 b^1 & = & \sqrt{2} + \sqrt{3}\\
@@ -2262,7 +2270,7 @@ Wir suchen $a_0, a_1, a_2, a_3 \in \Q$ mit
 & = & \underbrace{(a_0 + 5 \cdot a_2 + 49)}_{= 0} + \underbrace{(a_1 + 11a_3)}_{= 0}\sqrt{2} + \underbrace{(a_1 + 9a_3)}_{= 0}\sqrt{3} + \underbrace{(2a_2 + 20)}_{= 0}\sqrt{6}
 \end{array}\]
 Also: $a_2 = -10, a_0 = 1, a_1 = a_3 = 0$. Daher: $\mu = 1 - 10X^2 + X^4$.\\
-Folglich: $\left[\Q(\sqrt{2} + \sqrt{3}):\Q\right] = 4$ und $\Q(\sqrt{2}, \sqrt{3}) = \Q(\sqrt{2} + \sqrt{3})$
+Folglich: $\left[\Q(\sqrt{2} + \sqrt{3})\colon \Q\right] = 4$ und $\Q(\sqrt{2}, \sqrt{3}) = \Q(\sqrt{2} + \sqrt{3})$
 \end{bsp}
 
 % Satz 7.4
@@ -2369,7 +2377,7 @@ Für $p \in \PZ$ und $n \in \N$ bezeichnet man den im wesentlichen eindeutig best
 
 % Beispiel 7.6
 \begin{bsp}\label{bsp:7.6}
-$\left[\Q(\sqrt{2}):\Q\right] = 2=\left[\Q(\sqrt{3}):\Q\right]$, aber $\underbrace{\Q(\sqrt{2})}_{\text{hier Element mit }a^2 = 2} \ncong \underbrace{\Q(\sqrt{3})}_{\text{hier kein Element mit }a^2 = 2}$, denn in $\Q(\sqrt{2})$ exisitiert kein $b$ mit $b^2 = 3$.
+$\left[\Q(\sqrt{2})\colon \Q\right] = 2=\left[\Q(\sqrt{3})\colon \Q\right]$, aber $\underbrace{\Q(\sqrt{2})}_{\text{hier Element mit }a^2 = 2} \ncong \underbrace{\Q(\sqrt{3})}_{\text{hier kein Element mit }a^2 = 2}$, denn in $\Q(\sqrt{2})$ exisitiert kein $b$ mit $b^2 = 3$.
 \end{bsp}
 
 % Satz 7.8
@@ -2546,7 +2554,7 @@ Die Punkte in $M_{\infty} \coloneqq \bigcup\limits_{i = 0}^{\infty}M_i$ heißen d
 Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
   Teilkörper von $\C$, der mit einer komplexen Zahl $z$ auch $\overline{z}$
   und jede Quadratwurzel aus $z$ enthält\footnote{D.\,h. $M_{\infty}$
-  abgeschlossen gegenüber $+, -, \cdot, :, -, \sqrt{ }$}.
+  abgeschlossen gegenüber $+, -, \cdot, \colon , -, \sqrt{ }$}.
 \end{satz}
 
 % Beweis
@@ -2739,7 +2747,7 @@ Für jede Körpererweiterung $L|K$ und jede Teilmenge $M \subseteq L$ sei $K(M)$ d
 \begin{satz}\label{satz:9.3}
 Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ und jedes $z \in \C$ gilt:\\
 $z$ ist aus $m$ konstruierbar $\Leftrightarrow \exists$ Folge von Teilkörpern 
-\[\Q(M \cup \overline{M}) = L_0 \subseteq L_1 \subseteq \ldots \subseteq L_M\] von $\C$ mit $z \in L_m$ und $\left[L_n:L_{n-1}\right] = 2$ für $n = 1, \ldots, m$.
+\[\Q(M \cup \overline{M}) = L_0 \subseteq L_1 \subseteq \ldots \subseteq L_M\] von $\C$ mit $z \in L_m$ und $\left[L_n\colon L_{n-1}\right] = 2$ für $n = 1, \ldots, m$.
 \end{satz}
 
 % Beweis
