--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2588,20 +2588,18 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
     \draw (1.2,1) node {$z$};
     \draw (1.2,-1) node {$\overline{z}$};
   \end{tikzpicture}
-	\item $w, z \in M_{\infty} \Rightarrow w + z \in M_{\infty}$:\\
-	% \InitGraph{4}{4}{0.2}{0.2}{1cm}
-	% \Axes
-	% \LineAt(0, 0, 1, 2)
-	% \LineAt(0, 0, 2, 1)
-	% \SetDashed
-	% \LineAt(1, 2, 3, 3)
-	% \LineAt(2, 1, 3, 3)
-	% \SetNormal
-	% \TextAt(1, 2)[t]{$z$}
-	% \TextAt(2, 1)[b]{$w$}
-	% \TextAt(3, 3)[r]{$w+z$}
-	% \CloseGraph
-	
+\item $w, z \in M_{\infty} \Rightarrow w + z \in M_{\infty}$:\\
+  \begin{tikzpicture}
+    \draw[->] (0,0) -- (4,0);
+    \draw[->] (0,0) -- (0,4);
+    \draw[thick] (0,0) -- (2,1);
+    \draw[thick] (0,0) -- (1,2);
+    \draw[dashed] (1,2) -- (3,3);
+    \draw[dashed] (2,1) -- (3,3);
+    \draw (1,2.2) node {$w$};
+    \draw (2,.8) node {$z$};
+    \draw (3.1,3.1) node {$w+z$};
+  \end{tikzpicture}
 	\item $z \in H_{\infty} \Rightarrow \Re(z), \Im(z) \in M_{\infty}$:\\
 	% \InitGraph{4}{3}{0.2}{0.2}{1cm}
 	% \Axes
