--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2600,26 +2600,20 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
     \draw (2,.8) node {$z$};
     \draw (3.1,3.1) node {$w+z$};
   \end{tikzpicture}
-	\item $z \in H_{\infty} \Rightarrow \Re(z), \Im(z) \in M_{\infty}$:\\
-	% \InitGraph{4}{3}{0.2}{0.2}{1cm}
-	% \Axes
-	% \TextAt(0, 2)[l]{$\Im(z)\ \operatorname{i}$}
-	% \TextAt(2, 0)[b]{$\Im(z)$}
-	% \TextAt(3, 0)[b]{$\Re(z)$}
-	% \TextAt(3, 2)[r]{$z$}
-	% \MedPointAt(0, 2)
-	% \MedPointAt(2, 0)
-	% \MedPointAt(3, 0)
-	% \MedPointAt(3, 2)
-	% \RightAngleAt(3, 0)(90)
-	% \RightAngleAt(0, 2)(270)
-	% \SetDashed
-	% \LineAt(0, 2, 3, 2)
-	% \LineAt(3, 2, 3, 0)
-	% \Bezier(0, 2)(1.5, 1.5)(2, 0)
-	% \SetNormal
-	% \CloseGraph
-	
+\item $z \in H_{\infty} \Rightarrow \Re(z), \Im(z) \in M_{\infty}$:\\
+  \begin{tikzpicture}
+    \draw[->] (0,0) -- (4,0);
+    \draw[->] (0,0) -- (0,4);
+    \draw[dashed] (0,3) -- (3.5,3);
+    \draw[dashed] (3.5,3) -- (3.5,0);
+    \filldraw (0,3) circle (1pt);
+    \filldraw (3.5,3) circle (1pt);
+    \filldraw (3.5,0) circle (1pt);
+    \draw[loosely dashed] (0,3)  .. controls (2,2) .. (3,0);
+    \filldraw (3,0) circle (1pt);
+    \draw (3.7,3.2) node {$z$};
+    \draw (-.2,3.2) node {$\operatorname{i}$};
+  \end{tikzpicture}
 	\item $x, y \in M_{\infty} \cap \R \Rightarrow x + \operatorname{i}y \in M_{\infty}$:\\
 	% \InitGraph{3}{3}{0.2}{0.2}{1cm}
 	% \Axes
