--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -2631,32 +2631,26 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
   \begin{tikzpicture}
     \draw[->] (0,0) -- (4,0);
     \draw[->] (0,0) -- (0,4);
-%    \draw[thick] (-.5,2.3) -- (400:1cm);
-%    \draw (315:1.5cm) -- (2,2);
-%    \draw[dashed] (-.5,3.8) -- +(4.5,-4.5);
-%    \filldraw (intersection of -.5,2.3--330:1cm and 0,0--0,4) circle (1pt);
-  \end{tikzpicture}
-	% \InitGraph{4}{4}{0.2}{0.2}{1cm}
-	% \Axes
-	% \MedPointAt(0, 3)
-	% \MedPointAt(0, 1)
-	% \MedPointAt(3, 0)
-	% \MedPointAt(1, 0)
-	% \TextAt(0, 3)[l]{$x \operatorname{i}$}
-	% \TextAt(0, 1)[l]{$w \operatorname{i}$}
-	% \TextAt(3, 0)[b]{$z$}
-	% \TextAt(1, 0)[b]{$1$}
-	% \TextAt(2, 2)[r]{Strahlensatz: $\frac{z}{1} = \frac{x}{w}$, d.\,h. $x = z \cdot w$}
-	% \LineAt(-0.5, 1.5, 1.5, -0.5)
-	% \SetDashed
-	% \LineAt(-0.5, 3.5, 3.5, -0.5)
-	% \SetNormal
-	% \CloseGraph
-	
+    \filldraw (0,3.5) circle (1pt) (3.5,0)  circle (1pt) (0,2) circle (1pt)  (2,0) circle (1pt);
+    \draw[shorten >=-0.5cm,      shorten <=-0.5cm] (0,2) -- (2,0);
+    \draw[shorten >=-0.5cm,      shorten <=-0.5cm, dashed] (0,3.5) --  (3.5,0);
+    \draw (2,-.2) node {$1$} (3.5,-.2) node {$z$};
+    \draw (-.4,2) node {$w\operatorname{i}$} (-.4,3.5) node {$x\operatorname{i}$};
+\draw (0,-1) node {Strahlensatz: $\frac{z}{1} = \frac{x}{w}$, d.\,h. $x = z \cdot w$};
+  \end{tikzpicture}	
 \item $z \in M_{\infty} \Rightarrow \frac{1}{z} =
   \frac{\overline{z}}{z \cdot \overline{z}} \in M_{\infty}$:\\
   \OE{}: $z \in \R, z > 0$\\
-
+  \begin{tikzpicture}
+    \draw[->] (0,0) -- (4,0);
+    \draw[->] (0,0) -- (0,4);
+    \filldraw (0,3.5) circle (1pt) (3.5,0)  circle (1pt) (0,2) circle (1pt)  (2,0) circle (1pt);
+    \draw[shorten >=-0.5cm,      shorten <=-0.5cm] (0,2) -- (2,0);
+    \draw[shorten >=-0.5cm,      shorten <=-0.5cm, dashed] (0,3.5) --  (3.5,0);
+    \draw (2,-.2) node {$1$} (3.5,-.2) node {$z$};
+    \draw (-.4,2) node {$x\operatorname{i}$} (-.4,3.5) node {$x\operatorname{i}$};
+\draw (0,-1) node {Strahlensatz: $\frac{1}{z} = \frac{x}{1}$};
+  \end{tikzpicture}
 \item $z \in M_{\infty} \Rightarrow w \coloneqq \sqrt{z} \in M_{\infty}$:\\
   Schreibe: $z = \abs{z}(\cos\phi + \operatorname{i} \cdot \sin\phi)$.
   Dann: $\sqrt{z} = \sqrt{\abs{z}}(\cos\frac{\phi}{2} +
